src/test/data/tests/chapter_17/invalid_types/extra_credit/postfix_decr_void.c
// Can't apply postfix ++/-- to void lvalue
void f(void){
    return;
}

int main(void) {
    ++(f())--;
    return 0;
}
